# dominari-ecs

./: Anchor.toml  Cargo.toml  FIXES.md  README.md  package.json
client-nextjs/: .gitignore  constants.ts  next.config.js  package-lock.json  package.json
client-nextjs/components/: Game.tsx
client-nextjs/pages/: debug.tsx  game.tsx  index.tsx
client-nextjs/styles/: Game.module.css  Index.module.css
client-rs/: Cargo.toml
client-rs/blueprints/units/: Scout.toml
client-rs/configs/: 2player.toml
client-rs/maps/: 01.toml
client-rs/scripts/: deploy.bash  test.bash
client-rs/src/: main.rs  map.rs  register.rs  repl.rs  state.rs  util.rs
client-xnft/: package.json  webpack.config.js
client-xnft/src/: App.tsx
programs/dominarisystems/: Cargo.toml
programs/dominarisystems/src/: account.rs  component.rs  components.rs  constant.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
programs/dominariworld/: Cargo.toml
programs/dominariworld/src/: account.rs  constant.rs  context.rs  event.rs  lib.rs
programs/ecs/: Cargo.toml
programs/ecs/src/: account.rs  context.rs  event.rs  lib.rs  state.rs
sdk/dominari/: Cargo.toml
sdk/dominari/src/: components.rs  dominari.rs  gamestate.rs  lib.rs  universe.rs  util.rs  wasm.rs  world.rs
sdk/js/: package.json  tsconfig.json
sdk/js/src/: constants.ts  dominari.ts  index.ts
tests/: ecs.ts
