[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominari = { path="../sdk/dominari" }
anchor-client = "0.25.0"
shellexpand = "2.1.0"
tokio = { version="1.2", features = ["full"] }