[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominari = { path="../sdk/dominari" }
shellexpand = "2.1.0"
futures = "0.3.25"
solana-client-wasm = { git = "https://github.com/spacemandev-git/solana-playground" }
