[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominari = { path="../sdk/dominari" }
shellexpand = "2.1.0"
tokio = { version = "1.14.1", features=["full"]}
solana-client-wasm = { git = "https://github.com/spacemandev-git/solana-playground" }
solana-transaction-status = "1.10.34"
solana-client = "1.10.34"
toml = "0.5.9"
serde = "1.0.147"
borsh = "0.9.3"
rand = "0.8.5"