[package]
name = "dominarisystems"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dominarisystems"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
ecs = { path = "../ecs", features = ["cpi"]}
dominariworld = { path = "../dominariworld", features = ["cpi"]}
