[package]
name = "dominari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
solana-client-wasm = { git = "https://github.com/spacemandev-git/solana-playground" }
solana-sdk = "1.10.34"
ecs = { path = "../../programs/ecs", features = ["no-entrypoint"]}
dominariworld = { path = "../../programs/dominariworld", features = ["no-entrypoint"]} 
dominarisystems = { path = "../../programs/dominarisystems", features = ["no-entrypoint"]}
borsh = "0.9.3"
bimap = "0.6.2"